sfdx-source/force-app/main/default/objects/Email_Outbound_Events_Binding__mdt/Email_Outbound_Events_Binding__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13778: It is used to store mapping of factory classes.</description>
    <label>Email Outbound Events Binding</label>
    <pluralLabel>Email Outbound Events Bindings</pluralLabel>
</CustomObject>