sfdx-source/force-app/main/default/objects/Email_Outbound_Events_Binding__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It is used factory class name that should be called based on the topic.</description>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>