sfdx-source/force-app/main/default/objects/Email_Outbound_Events_Binding__mdt/fields/Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Scope_Size__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It is used to store the execution scope size based on the processing payload size.</description>
    <label>Scope Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>