sfdx-source/force-app/main/default/objects/Email_Outbound_Events_Binding__mdt/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13778: It is used to store the name of the topic.</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>